feat: implement pot expense functionality and UI updates

--- a/src/i18n/locales/ca/translation.json
+++ b/src/i18n/locales/ca/translation.json
@@ -55,6 +55,7 @@
       "expense": "Pagat per",
       "compensation": "Pagat a"
     },
+    "potLabel": "El Pot",
     "unknownParticipant": "Participant desconegut"
   },
   "transactionModal": {
@@ -80,6 +81,7 @@
       "compensation": "Pagat a"
     },
     "participantPlaceholder": "Selecciona un participant",
+    "potOption": "POT (Pot Comú)",
     "save": "Desar"
   },
   "kpiDetail": {
