--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -55,6 +55,7 @@
       "expense": "Pagado por",
       "compensation": "Pagado a"
     },
+    "potLabel": "El Bote",
     "unknownParticipant": "Participante desconocido"
   },
   "transactionModal": {
@@ -80,6 +81,7 @@
       "compensation": "Pagado a"
     },
     "participantPlaceholder": "Selecciona un participante",
+    "potOption": "BOTE (Bote Común)",
     "save": "Guardar"
   },
   "kpiDetail": {
