feat(kpi): add KPI detail components and integrate into KPIDetail page
- Introduced KPIDetailHeader for navigation and event title display.
- Added KPIExplanation to provide translated notes for each KPI type.
- Created KPIParticipantsList to display participants and their KPI values, including a visual distinction for pot items.
- Updated index files to export new components and types.
- Enhanced useTransactionsStore with a method to retrieve pot expenses data.
- Modified translations to reflect changes in KPI terminology.
- Refactored KPIDetail page to utilize new components and improve structure.

--- a/src/i18n/locales/ca/translation.json
+++ b/src/i18n/locales/ca/translation.json
@@ -87,14 +87,14 @@
   "kpiDetail": {
     "notFound": "KPI o esdeveniment no trobat",
     "kpi": {
-      "pot": "Saldo del Pot",
+      "balance": "Saldo del Pot",
       "contributions": "Contribució Total",
       "expenses": "Despesa Total",
       "pending": "Pendent de Pagar"
     },
     "participants": "Participants",
     "noteTitle": "Nota:",
-    "notePot": "Diners disponibles al fons comú.",
+    "noteBalance": "Diners disponibles al fons comú.",
     "noteContributions": "Suma d'aportacions de cada participant.",
     "noteExpenses": "Total gastat per cada participant.",
     "notePending": "Quantitat que cada participant deu o li deuen."
