feat: implement useModalState and useConfirmDialog hooks for UI state management
- Added useModalState hook for managing modal open/close state.
- Introduced useConfirmDialog hook for handling confirmation dialogs.
- Updated FRONTEND_API_INTEGRATION.md to document new hooks and usage patterns.
- Created UI_STATE_MANAGEMENT_STRATEGY.md to outline the new architecture and decision-making process.
- Refactored Home.tsx and EventDetail.tsx to utilize new hooks, improving consistency and maintainability.
- Removed unused Zustand stores related to UI state management.

--- a/apps/frontend/src/i18n/locales/ca/translation.json
+++ b/apps/frontend/src/i18n/locales/ca/translation.json
@@ -45,6 +45,7 @@
     "deleteAria": "Elimina participant"
   },
   "eventDetail": {
+    "invalidId": "ID d'esdeveniment invàlid",
     "notFound": "Esdeveniment no trobat",
     "kpi": {
       "pot": "Saldo del Pot",
