--- a/apps/frontend/src/i18n/locales/en/translation.json
+++ b/apps/frontend/src/i18n/locales/en/translation.json
@@ -45,6 +45,7 @@
     "deleteAria": "Delete participant"
   },
   "eventDetail": {
+    "invalidId": "Invalid event ID",
     "notFound": "Event not found",
     "kpi": {
       "pot": "Pot Balance",
