feat: Refactor header and layout components for improved UI/UX
- Introduced MainLayout component to replace ProtectedLayout for consistent layout structure.
- Updated Home and EventDetail pages to utilize MainLayout.
- Added HeaderSection component to enhance the home page with title, subtitle, and action button.
- Refactored Header component for better accessibility and responsiveness.
- Updated translations for home and events in Catalan, English, and Spanish.
- Enhanced CSS styles for a more modern look, including glass effect and responsive design.
- Removed deprecated ProtectedLayout component.
- Added new utility classes and animations in Tailwind configuration.
- Updated documentation to reflect changes in header and home page structure.

--- a/apps/frontend/src/i18n/locales/ca/translation.json
+++ b/apps/frontend/src/i18n/locales/ca/translation.json
@@ -1,5 +1,7 @@
 {
   "home": {
+    "title": "Esdeveniments",
+    "subtitle": "Gestiona els teus esdeveniments",
     "newEvent": "Nou Esdeveniment"
   },
   "theme": {
@@ -130,5 +132,11 @@
     "title": "Estàs segur?",
     "confirm": "Sí",
     "cancel": "Cancel·lar"
+  },
+  "events": {
+    "createEventCard": {
+      "title": "Crear nou esdeveniment",
+      "subtitle": "Comença a dividir despeses amb els teus amics ara mateix."
+    }
   }
 }
